--- a/MCP-Server/Containerfile
+++ b/MCP-Server/Containerfile
@@ -36,16 +36,16 @@ WORKDIR /rails/demo
 RUN bundle init \
   && bundle add rails --version "~> 8.1.1" \
   && bundle exec rails new . --force --skip-git --database=sqlite3 --api
+# ToDo Model
+RUN bundle exec rails generate model Todo title:string completed:boolean \
+  && RAILS_ENV=production bundle exec rails db:migrate
 # FastMCP
 RUN bundle add fast-mcp \
   && bin/rails generate fast_mcp:install \
   && sed -i 's/# authenticate: true/authenticate: true/g' config/initializers/fast_mcp.rb \
   && sed -i "s/# auth_token: 'your-token'/auth_token: 'secret-token'/g" config/initializers/fast_mcp.rb \
   && sed -i 's$rails_health_check$rails_health_check\n  mount FastMcp::RackApp => "/mcp"$g' config/routes.rb \
-  && echo "\nFastMcp::Server.define do\n    resource :todos do\n        list { Todo.all }\n        get { |id| Todo.find(id) }\n        create { |attrs| Todo.create!(attrs.slice("title","done")) }\n        update { |id, attrs| t = Todo.find(id); t.update!(attrs.slice("title","done")); t }\n        delete { |id| Todo.find(id).destroy! }\n    end\nend" >> config/initializers/fast_mcp.rb
-# ToDo Model
-RUN bundle exec rails generate model Todo title:string completed:boolean \
-  && RAILS_ENV=production bundle exec rails db:migrate
+  && echo "\nFastMcp::Server.define do\n    resource :todos do\n        list { Todo.all }\n        get { |id| Todo.find(id) }\n        create { |attrs| Todo.create!(attrs.slice("title","completed")) }\n        update { |id, attrs| t = Todo.find(id); t.update!(attrs.slice("title","completed")); t }\n        delete { |id| Todo.find(id).destroy! }\n    end\nend" >> config/initializers/fast_mcp.rb
 
 # new stage for Rails app
 FROM debian:trixie-slim as rails
