--- a/MCP-Server/Containerfile
+++ b/MCP-Server/Containerfile
@@ -38,14 +38,14 @@ RUN bundle init \
   && bundle exec rails new . --force --skip-git --database=sqlite3 --api
 # ToDo Model
 RUN bundle exec rails generate model Todo title:string completed:boolean \
-  && RAILS_ENV=production bundle exec rails db:migrate
+  && RAILS_ENV=production bundle exec rails db:migrate \
+  && RAILS_ENV=production echo 'Todo.create(title: "Test Todo Title", completed: false)' | bundle exec rails console
 # FastMCP
 RUN bundle add fast-mcp \
   && bin/rails generate fast_mcp:install \
   && sed -i 's/# authenticate: true/authenticate: true/g' config/initializers/fast_mcp.rb \
   && sed -i "s/# auth_token: 'your-token'/auth_token: 'secret-token'/g" config/initializers/fast_mcp.rb \
-  && sed -i 's$rails_health_check$rails_health_check\n  mount FastMcp::RackApp => "/mcp"$g' config/routes.rb \
-  && echo "\nFastMcp::Server.define do\n    resource :todos do\n        list { Todo.all }\n        get { |id| Todo.find(id) }\n        create { |attrs| Todo.create!(attrs.slice("title","completed")) }\n        update { |id, attrs| t = Todo.find(id); t.update!(attrs.slice("title","completed")); t }\n        delete { |id| Todo.find(id).destroy! }\n    end\nend" >> config/initializers/fast_mcp.rb
+  && sed -i "s/Rails.application.routes.draw do/require 'fast_mcp'\n\nRails.application.routes.draw do/g" config/routes.rb
 
 # new stage for Rails app
 FROM debian:trixie-slim as rails
@@ -70,13 +70,10 @@ COPY --from=install /rails/demo /rails/demo
 
 WORKDIR /rails/demo
 
-RUN mkdir config/certificates \
-  && openssl req -x509 -sha256 -nodes -newkey rsa:4096 -keyout config/certificates/localhost.key -out config/certificates/localhost.crt -subj "/CN=localhost" -days 365
-
 ENV RAILS_ENV=production
 
 EXPOSE 3000
 
-HEALTHCHECK --interval=35s --timeout=4s CMD curl --insecure --fail https://localhost:3000/up || exit 1
+HEALTHCHECK --interval=35s --timeout=4s CMD curl --insecure --fail http://localhost:3000/up || exit 1
 
-CMD ["bundle", "exec", "rails", "server", "-b", "ssl://0.0.0.0:3000?key=config/certificates/localhost.key&cert=config/certificates/localhost.crt", "-p", "3000"]
+CMD ["bundle", "exec", "rails", "server", "-b", "0.0.0.0", "-p", "3000"]
