--- a/MCP-Server/Containerfile
+++ b/MCP-Server/Containerfile
@@ -45,9 +45,9 @@ RUN bundle add fast-mcp \
   && bin/rails generate fast_mcp:install \
   && sed -i 's/# authenticate: true/authenticate: true/g' config/initializers/fast_mcp.rb \
   && sed -i "s/# auth_token: 'your-token'/auth_token: 'secret-token'/g" config/initializers/fast_mcp.rb \
-  && sed -i "s/# config.expose User/config.expose Todo\n  # config.expose User/g" config/initializers/fast_mcp.rb \
   && sed -i "s/Rails.application.routes.draw do/require 'fast_mcp'\n\nRails.application.routes.draw do/g" config/routes.rb
 COPY todos_tool.rb app/tools/
+COPY todo_resource.rb app/resources/
 
 # new stage for Rails app
 FROM debian:trixie-slim as rails
