--- a/MCP-Server/Containerfile
+++ b/MCP-Server/Containerfile
@@ -47,7 +47,7 @@ RUN bundle add fast-mcp \
   && sed -i "s/# auth_token: 'your-token'/auth_token: 'secret-token'/g" config/initializers/fast_mcp.rb \
   && sed -i "s/Rails.application.routes.draw do/require 'fast_mcp'\n\nRails.application.routes.draw do/g" config/routes.rb \
   && rm app/tools/sample_tool.rb app/resources/sample_resource.rb
-COPY todos_tool.rb app/tools/
+COPY get_todos_tool.rb app/tools/
 COPY todo_resource.rb app/resources/
 
 # new stage for Rails app
